--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "jquery": "^3.3.1",
     "lodash": "^4.17.11",
     "react": "^16.8.4",
+    "react-connect-elements": "^0.1.1",
     "react-dom": "^16.8.4",
     "react-scripts": "2.1.8"
   },
