--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.15",
     "@fortawesome/free-solid-svg-icons": "^5.7.2",
     "@iconify/react": "^1.0.7",
+    "@material-ui/core": "^4.0.2",
     "axios": "^0.18.0",
     "jquery": "^3.3.1",
     "lodash": "^4.17.11",
